# categorization_sentence_llama2

./: .gitignore  pyproject.toml  query.py
