[tool.poetry]
name = "query-llama-core"
version = "0.1.0"
description = ""
authors = ["Lily Perera <lilycapetillo86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
